2002-07-03  Paolo Maggi <maggi@athena.polito.it>

	* gnome-vfs-helpers.[ch]: removed

	* *.c: s/gnome_vfs_x/eel

2002-06-28  James Willcox  <jwillcox@cs.indiana.edu>

	* dialogs/gedit-dialog-goto-line.c:  Only allow digits in the entry

2002-06-17  Federico Mena Quintero  <federico@ximian.com>

	Fixes #84986.

	* bonobo-mdi.c (gen_role): Moved over from gedit-mdi.c.
	(app_create): Added a "window_role" argument so that we can set up
	the window's role here.
	(app_clone): Likewise.
	(bonobo_mdi_open_toplevel): Likewise.
	(bonobo_mdi_add_toplevel_view): Likewise.

	* bonobo-mdi-session.c (restore_window_child): Pass the role
	argument to bonobo_mdi_add_toplevel_view().
	(restore_window): Pass the role argument to
	bonobo_mdi_open_toplevel().

	* gedit2.c (main): Likewise.

	* gedit-mdi.c (gedit_mdi_app_created_handler): Do not set the role
	here.

2002-06-14  Paolo Maggi <maggi@athena.polito.it>

	* gedit-prefs-manager.[ch]: new files

	* Makefile.am:
	* gedit-commands.c:
	* gedit-document.c:
	* gedit-file.c:
	* gedit-mdi.[ch]:
	* gedit-print.c:
	* gedit-recent.c:
	* gedit-session.c:
	* gedit-undo-manager.c:
	* gedit-view.c:
	* gedit2.c:
	* dialogs/gedit-preferences-dialog.[ch]:
	* dialogs/gedit-preferences.glade2: use gedit-prefs-manager API

2002-06-14  Paolo Maggi <maggi@athena.polito.it>

	* src/gedit-preferences.glade2: fixed a typo

2002-06-11  Federico Mena Quintero  <federico@ximian.com>

	* gedit-mdi.c (gedit_mdi_remove_child_handler):
	gtk_window_present() the confirmation dialog so that the user sees
	it even when shutting down the session.  Fixes #84677.

2002-06-05  Jagadeesh B.G  <jagadeesh.banavara@wipro.com>

	* src/dialogs/gedit-preferences.glade2: Fix some ATK relations.
	Fixes bug #84108.

2002-05-31  Federico Mena Quintero  <federico@ximian.com>

	* Makefile.am (INCLUDES): Patch by Hidetoshi Tajima
	(hidetoshi.tajima@sun.com) to fix the localedir on Solaris.  Fixes
	#83614.

2002-05-30  James Willcox <jwillcox@cs.indiana.edu>
